deployments/seerr/seerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: servarr
  labels:
    app: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: seerr-config
              mountPath: /config
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-data
