deployments/seerr/seerr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: servarr
spec:
  type: ClusterIP
  selector:
    app: seerr
  ports:
    - port: 5055
      targetPort: 5055
