deployments/seerr/seerr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: servarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "seerr.k3s-cluster.local.obleey.com"
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
